# Robothon---SR101-Manipulator-Arm

./: README.md  water_pour.webm
hackathon_ws/hackathon_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hackathon_ws/hackathon_ws/install/so101_description/share/so101_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
hackathon_ws/hackathon_ws/install/so101_gazebo/lib/so101_gazebo/: object_detector.py  palletizing_fetch.py
hackathon_ws/hackathon_ws/install/so101_gazebo/share/so101_gazebo/: local_setup.bash  local_setup.sh  (+8 more)
hackathon_ws/hackathon_ws/log/: latest_build
hackathon_ws/hackathon_ws/src/so101_description/: CMakeLists.txt
hackathon_ws/hackathon_ws/src/so101_description/meshes/: container.stl
hackathon_ws/hackathon_ws/src/so101_description/urdf/: container.urdf  marking_final.urdf  marking_initial.urdf  water_particle.urdf
hackathon_ws/hackathon_ws/src/so101_gazebo/: CMakeLists.txt  package.xml
hackathon_ws/hackathon_ws/src/so101_gazebo/config/: controllers.yaml
hackathon_ws/hackathon_ws/src/so101_gazebo/launch/: so101_gazebo.launch.py
hackathon_ws/hackathon_ws/src/so101_gazebo/scripts/: object_detector.py  palletizing_fetch.py  pick_place_test.py  visualize_all_launch.py
hackathon_ws/hackathon_ws/src/so101_gazebo/worlds/: empty_world.sdf
hackathon_ws/hackathon_ws/src/so101_moveit_config/config/: ompl_planning.yaml
hackathon_ws/hackathon_ws/src/so101_moveit_config/launch/: move_group.launch.py
hackathon_ws/hackathon_ws/src/so101_moveit_config/scripts/: transit_handler.py
(+70 files in other folders)
